# benchmarks

./: .gitignore  README.md  agent_load_benchmark.py  bench  micro.py  multi_agent_benchmark.py  plot.py  plot_agent_load_benchmark.py  plot_results.py  pyproject.toml  requirements-client.txt  scheduler_simulator.py  sdk.py
agent/: Makefile
agent/grpcsh/: agent.go  go.mod  grpcsh.go  mux.go  router.go
agent/grpcsh/agent/: agent.go  mux.go
agent/grpcsh/pb/: channel_service.pb.go  channel_service_grpc.pb.go  executor_service.pb.go  executor_service_grpc.pb.go  messages.pb.go  router_service.pb.go  router_service_grpc.pb.go
agent/grpcsh/router/: router.go
agent/protos/: channel_service.proto  executor_service.proto  messages.proto  router_service.proto
sdk/: __init__.py  agent.py  base.py  grpc.py  ssh.py
